--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>ADA Students feedback</title>
-<link rel="icon" type="image/x-icon" href="images/logo.png" />
-<link rel="stylesheet" href="css/style.css">
+<link rel="icon" type="image/x-icon" href="res/images/logo.png" />
+<link rel="stylesheet" href="res/css/style.css">
 </head>
 <body>
 
@@ -11,7 +11,7 @@
 <div class="sidebyside">
 <div class="left-side">
 <div class="first_class">
-                        <img src="images/picture.png" alt="picture_login" >
+                        <img src="res/images/picture.png" alt="picture_login" >
                 </div >
                 <p class="font">To giv us feedback , because this <br> course is made for you ! 
                     Because it's <br> all about you</p>
